methods.flowerpot.FlowerCase.scala.error
Compilation error:
FlowerCase:50: error: expected class or object definition
def growFlowers() {
^FlowerCase:58: error: Unmatched closing brace '}' ignored here
}
^